# SWIO

./: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
examples/: swio.conf
src/: Makefile.am  Makefile.in  swio.F90  swio_calculator.F90  swio_data.F90  swio_methods.F90
